add introduce and service

--- a/index.html
+++ b/index.html
@@ -46,6 +46,88 @@
     </nav>
     <!-- End of Navbar -->
   
+    <!-- Introduce -->
+    <div class="container-fluid" id="monster" style="margin-top: -50px;">
+        <div class="row introduce">
+            <div class="col-sm-5">
+
+                <h3>Stop <span>global pandemic</span> trough <br> <span>Sehat-ku App</span></h3>
+                <p>Stop the global pandemic by limiting people and tightening health protocol on public</p>
+                <a href=""><button class="btn btn-warning"
+                        style="height:3em; object-position: center; font-size: 1.3em; font-weight: 700;">Download
+                        APK</button></a>
+            </div>
+            <div class="col-lg-6">
+                <img src="assets/img/undraw_social_distancing_2g0u.svg" class="img-fluid" alt="workingspace">
+            </div>
+        </div>
+    </div>
+    <!-- End of Introduce -->
+
+    <!-- Services -->
+    <div class="container" id="services">
+        <div class="row divider hideme">
+            <h1>Sehat-Ku Services</h1>
+        </div>
+        <div class="row">
+            <div class="col align-self-center hideme">
+                <div>
+                    <h2>Services </h2>
+                    <p>We make people comfort during outside and limiting people accesibilities to public facilities
+                        based on their health to
+                        stop the global pandemic </p>
+                </div>
+            </div>
+            <div class="col hideme">
+                <div class="card" style="width: 18rem;">
+                    <img src="assets/img/undraw_sync4_xlc6.svg" class="card-img-top" alt="label-me">
+                    <div class="card-body">
+                        <h5 class="card-title">Label-Me </h5>
+                        <p class="card-text" style="text-align: center;">Labeling people based on their health statuses
+                            to limit their activities and mobilities
+                        </p>
+                        <!-- Button trigger modal -->
+                        <button type="button" class="btn btn-success" data-toggle="modal" data-target="#label-me">
+                            Detail
+                        </button>
+                    </div>
+                </div>
+            </div>
+            <div class="col hideme">
+                <div class="card" style="width: 18rem;">
+                    <img src="assets/img/undraw_adventure_4hum.svg" class="card-img-top" alt="hotspot">
+                    <div class="card-body">
+                        <h5 class="card-title">Covid Hotspot</h5>
+                        <p class="card-text" style="text-align: center;">Know where are the places which has high
+                            COVID-19 spreading risk and be aware when you close</p>
+                        <!-- Button trigger modal -->
+                        <button type="button" class="btn btn-success" data-toggle="modal" data-target="#hotspot">
+                            Detail
+                        </button>
+                    </div>
+                </div>
+            </div>
+            <div class="col hideme">
+                <div class="card" style="width: 18rem;">
+                    <img src="assets/img/undraw_wash_hands_nwl2.svg" class="card-img-top" alt="hotspot">
+                    <div class="card-body">
+                        <h5 class="card-title">Prokes Request</h5>
+                        <p class="card-text" style="text-align: center;">Put your request for prokes
+                            availability and report it to nerby covid prevention agency</p>
+                        <!-- Button trigger modal -->
+                        <button type="button" class="btn btn-success" data-toggle="modal" data-target="#prokes">
+                            Detail
+                        </button>
+                    </div>
+                </div>
+            </div>
+
+
+        </div>
+    </div>
+    <!-- End of Services -->
+
+    
 </body>
 
 </html>
