add about us and footer

--- a/index.html
+++ b/index.html
@@ -127,6 +127,225 @@
     </div>
     <!-- End of Services -->
 
+    <!-- About Us -->
+    <div class="container-fluid" id="about">
+        <div class="row divider hideme">
+            <h1>About Sehat-Ku</h1>
+        </div>
+        <div class="row introduce hideme">
+            <div class="col-lg-6">
+                <img src="assets/img/about us.svg" style="margin-left: 20px;" class="img-fluid" alt="workingspace">
+            </div>
+            <div class="col-sm-5 hideme">
+
+                <h3 style="text-align: center;"><span>Sehat</span> Ku</h3>
+                <p style="text-align: center;"><span style="font-weight: 700;"> Sehat-Ku </span>is a service to help
+                    goverment to stop corona virus disease by 2 main way which is limiting people activities and
+                    mobilities based on their health statuses and make people comfort during outside by knowing where
+                    are the place is now has high corona virus spreading risk and be aware of it</p>
+
+            </div>
+
+        </div>
+    </div>
+
+    <!-- End of About Us -->
+
+
+    <!-- Footer -->
+    <footer>
+        <div class="container-fluid footer">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-4">
+                        <h5>About Sehat-Ku</h5>
+                        <p>We The Rectifier team and the world are believe that we can stop corona virus disease by
+                            putting the right step from now
+                        </p>
+                    </div>
+                    <div class="col-lg-4">
+                        <h5>Quick Links</h5>
+                        <div class="container">
+                            <div class="row">
+                                <div class="col-sm">
+                                    <p><a href="#">Home</a> <br><a href="#services">Services</a> <br>
+                                        <a href="#about" style="text-decoration: none;">About
+                                            Sehat-Ku</a>
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4">
+                        <h5>Reach Us</h5>
+                        <h4>+62 21 1810 6778</h4>
+                        <h6>Sentral Senayan II Lantai 28, Jl. Asia Afrika No. 8, Gelora, Tanah Abang, RT.1/RW.3, Gelora,
+                            Tanah Abang, Kota Jakarta Pusat, DKI Jakarta </h6>
+
+
+
+
+                        <div class="outline_social_links">
+                            <a href="http://www.facebook.com/sehatku" class="facebook" title="Facebook"
+                                target="_blank"><i class="fab fa-facebook-f"></i></a>
+                            <a href="http://www.twitter.com/sehatku" class="twitter" title="Twitter" target="_blank"><i
+                                    class="fab fa-twitter"></i></a>
+                            <a href="http://www.linkedin.com/sehatku" class="linkedin" title="Linkedin"
+                                target="_blank"><i class="fab fa-linkedin"></i></a>
+                            <a href="http://www.google.com/sehatku" class="google-plus" title="Google Plus"
+                                target="_blank"><i class="fab fa-google-plus"></i></a>
+                            <a href="http://www.instagram.com/sehatku" class="instagram" title="Instagram"
+                                target="_blank"><i class="fab fa-instagram"></i></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="copyright_part">
+                    <div class="bottom_center">Copyright ©
+                        <script>document.write(new Date().getFullYear());</script>, All rights reserved | Powered by
+                        <span><i class="fa fa-heart"></i> THE RECTIFIER TEAM </span>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+    </footer>
+    <!-- End of Footer -->
+
+
+
+
+    <!-- Modal -->
+
+    <!-- Label Me -->
+    <div class="modal fade" id="label-me" data-backdrop="static" data-keyboard="false" tabindex="-1"
+        aria-labelledby="label-me" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="label-me">Label-Me</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <div class="container-fluid">
+                        <div class="row">
+                            <img src="assets/img/undraw_sync4_xlc6.svg" class="modal-img">
+                        </div>
+                        <div class="row" style="text-align: center;">
+                            Label-Me is a service which be able to groping people and labeling them depend on their
+                            health statuses. Through Label-Me we believe we can limit people activities and mobilities
+                            based on their label to get access to any public facilities and transportation. To avoid
+                            double-account problem for one user we use NIK (Nomor Induk Penduduk) to identify our user
+                        </div>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Label Me -->
+
+
+
+    <!-- hotspot -->
+    <div class="modal fade" id="hotspot" data-backdrop="static" data-keyboard="false" tabindex="-1"
+        aria-labelledby="hotspot" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="hotspot">Covid Hotspot</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <div class="container-fluid">
+                        <div class="row">
+                            <img src="assets/img/undraw_adventure_4hum.svg" class="modal-img">
+                        </div>
+                        <div class="row" style="text-align: center;">
+                            Covid Hotspot is a service to collect report data about health protocol violation in any
+                            public facilities by filling the report form and give a picture of the violation. The
+                            pecture the used to validate the report using machine learning model. After it validately
+                            valid it will collect for then share the data and calculate the risk of the corona virus
+                            spread in the reported area. If the report was too high in an area, the area will be marked
+                            as Hotspot and then we will send the info to the local user from their own mobile phone
+                        </div>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- End of Hotspot -->
+
+
+
+    <!-- Prokes Report -->
+    <div class="modal fade" id="prokes" data-backdrop="static" data-keyboard="false" tabindex="-1"
+        aria-labelledby="prokes" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="prokes">Prokes Request</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <div class="container-fluid">
+                        <div class="row">
+                            <img src="assets/img/undraw_wash_hands_nwl2.svg" class="modal-img">
+                        </div>
+                        <div class="row" style="text-align: center;">
+                            Prokes Request is a service to get your report about requesting health protocol
+                            availability to any public facilities or public transportation facilities like requesting a
+                            washstand availability or anything with a picture of the place you reported. Your report
+                            then will send to nearby covid prevention agency through their official email or forum they
+                            provide for any covid report
+                        </div>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- End of Prokes -->
+
+    <!-- End of Modal -->
+
+
+    <!-- Optional JavaScript; choose one of the two! -->
+
+    <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/js/all.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.js"
+        integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
+
+    <!-- My Script -->
+    <script src="script.js"></script>
+
+    <!-- Option 2: jQuery, Popper.js, and Bootstrap JS
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
+    -->
     
 </body>
 
